<resources>
    <string name="app_name">Task</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up</string>
</resources>