<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="signUp.json"
            app:lottie_loop="true" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#3490dc"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="#465282"
            android:textColorHint="#b3c0d7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#3490dc"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#465282"
            android:textColorHint="#b3c0d7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullName"
            tools:layout_editor_absoluteY="363dp" />

        <EditText
            android:id="@+id/PasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#3490dc"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#465282"
            android:textColorHint="#b3c0d7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailSignUp" />

        <EditText
            android:id="@+id/City"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#3490dc"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="City"
            android:inputType="text"
            android:textColor="#465282"
            android:textColorHint="#b3c0d7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordSignUp" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_button"
            android:fontFamily="@font/acme"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/City"
            app:layout_constraintVertical_bias="0.205" />

        <TextView
            android:id="@+id/orSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/acme"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#3490dc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp" />

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:fontFamily="@font/acme"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="#3490dc"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.584" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="10dp"
            android:background="#3490dc"
            app:layout_constraintBottom_toTopOf="@id/alreadyHaveAnAccount"
            app:layout_constraintEnd_toStartOf="@+id/orSignUp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SignUp"
            app:layout_constraintVertical_bias="0.598" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="120dp"
            android:background="#3490dc"
            app:layout_constraintBottom_toTopOf="@id/alreadyHaveAnAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/orSignUp"
            app:layout_constraintTop_toBottomOf="@id/SignUp"
            app:layout_constraintVertical_bias="0.607" />

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressBarSignUp"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:SpinKit_Color="#3490dc"
            app:layout_constraintBottom_toTopOf="@+id/SignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/City" />


        <!--        <ProgressBar-->
        <!--            android:id="@+id/progressBarSignUp"-->
        <!--            style="?android:attr/progressBarStyle"-->
        <!--            android:visibility="invisible"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="178dp"-->
        <!--            android:layout_marginEnd="185dp"-->
        <!--            android:layout_marginBottom="9dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/button"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>